test/inference/good/coreml_letpoly.mlt
let main =
  let id = fun x -> x in
  let x = id 0 in
  id 'a'