test/inference/bad/coreml_monomorphic_let.mlt
let id = fun x -> x
let id2 = id id
let main = id2 0
